--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <circle cx="210" cy="110" r="7" fill="red" stroke="black" stroke-width="1" />
     <!-- Bunny body -->
     <ellipse cx="130" cy="190" rx="30" ry="25" fill="white" stroke="black" stroke-width="1" />
+    <!-- Bunny tail -->
+    <circle cx="160" cy="195" r="8" fill="white" stroke="black" stroke-width="1" />
     <!-- Bunny head -->
     <circle cx="110" cy="160" r="20" fill="white" stroke="black" stroke-width="1" />
 	<!-- Bunny ears -->
